# TMS-Express

./: .clang-format  .gitignore  CMakeLists.txt  README.md  build.py
.devcontainer/: devcontainer.json
.github/workflows/: build.yml  release-macos.yml  release-ubuntu.yml  unit-test.yml
cmake/: FindCLI11.cmake  FindIIR1.cmake  FindJSON.cmake  FindSamplerate.cmake
docker/: test.dockerfile
gui/: MainWindow.ui  mainwindow.ui
inc/: AudioBuffer.h  AudioPreprocessor.h  Autocorrelator.h  CoefficientSolver.h  LowerVocalTractAnalyzer.h  PitchEstimator.h  UpperVocalTractAnalyzer.h  UserParameters.h  debug.h
inc/Audio/: AudioBuffer.h  AudioFilter.h  AudioPreprocessor.h
inc/Frame_Encoder/: Frame.h  Tms5220CodingTable.h  TmsFrame.h
inc/Frame_Encoding/: Frame.h  FrameEncoder.h  FramePostProcessor.h  FramePostprocessor.h  Synthesizer.h  Tms5220CodingTable.h
inc/Interfaces/: BitstreamGenerator.h  Encoder.h  FileUtils.h  PathUtils.h
inc/LPC_Analysis/: Autocorrelation.h  Autocorrelator.h  LinearPredictor.h  LowerVocalTractAnalyzer.h  PitchEstimator.h  UpperVocalTractAnalyzer.h
inc/Pitch_Estimation/: PitchEstimator.h  PulseTrainGenerator.h  RundownCircuit.h
inc/User_Interfaces/: AudioWaveform.h  CommandLineApp.h  MainWindow.h
inc/User_Interfaces/Audio_Waveform/: AudioWaveformView.h
inc/User_Interfaces/Control_Panels/: ControlPanelLpcView.h  ControlPanelPitchView.h  ControlPanelPostView.h  ControlPanelView.h
src/: AudioBuffer.cpp  AudioPreprocessor.cpp  Autocorrelator.cpp  CoefficientSolver.cpp  LowerVocalTractAnalyzer.cpp  PitchEstimator.cpp  UpperVocalTractAnalyzer.cpp  UserParameters.cpp  main.cpp
src/Audio/: AudioBuffer.cpp  AudioFilter.cpp  AudioPreprocessor.cpp
src/Bitstream_Generation/: BitstreamGenerator.cpp  PathUtils.cpp
src/Frame_Encoder/: Frame.cpp  TmsFrame.cpp
src/Frame_Encoding/: Frame.cpp  FrameEncoder.cpp  FramePostProcessor.cpp  FramePostprocessor.cpp  Synthesizer.cpp
src/Interfaces/: BitstreamGenerator.cpp  Encoder.cpp  PathUtils.cpp
src/LPC_Analysis/: Autocorrelation.cpp  Autocorrelator.cpp  LinearPredictor.cpp  LowerVocalTractAnalyzer.cpp  PitchEstimator.cpp  UpperVocalTractAnalyzer.cpp
src/Pitch_Estimation/: PitchEstimator.cpp  PulseTrainGenerator.cpp  RundownCircuit.cpp
src/User_Interfaces/: AudioWaveform.cpp  CommandLineApp.cpp  MainWindow.cpp
src/User_Interfaces/Audio_Waveform/: AudioWaveform.cpp  AudioWaveformView.cpp
src/User_Interfaces/Control_Panels/: ControlPanelLpcView.cpp  ControlPanelPitchView.cpp  ControlPanelPostView.cpp  ControlPanelView.cpp
src/analysis/: PitchEstimator.hpp
src/audio/: AudioBuffer.hpp  AudioFilter.hpp
src/bitstream/: BitstreamGenerator.cpp  BitstreamGenerator.hpp  BitstreamGeneratorParameters.hpp
src/encoding/: CodingTable.hpp  Frame.cpp  Frame.hpp  FrameEncoder.cpp  FrameEncoder.hpp  FramePostprocessor.hpp  Synthesizer.cpp  Synthesizer.hpp
src/ui/: Application.cpp  Application.hpp
src/ui/cli/: CommandLineApp.cpp  CommandLineApp.hpp  EncoderCommand.cpp  EncoderCommand.hpp  GuiCommand.cpp  GuiCommand.hpp  SynthesizerCommand.cpp  SynthesizerCommand.hpp
src/ui/gui/: MainWindow.cpp  MainWindow.hpp
src/ui/gui/audiowaveform/: AudioWaveformView.cpp
src/ui/gui/controlpanels/: ControlPanelView.cpp  ControlPanelView.hpp
test/: AutocorrelatorTests.cpp  CMakeLists.txt  FrameEncoderTests.cpp  FrameTests.cpp  TmsTest.cmake
tms_express/: main.cpp
tms_express/Audio/: AudioBuffer.cpp  AudioBuffer.h  AudioBuffer.hpp  AudioFilter.cpp  AudioFilter.h  AudioFilter.hpp
tms_express/Bitstream_Generation/: BitstreamGenerator.cpp  BitstreamGenerator.hpp  PathUtils.cpp  PathUtils.h  PathUtils.hpp
tms_express/Frame_Encoding/: CodingTable.hpp  Frame.cpp  Frame.h  Frame.hpp  FrameEncoder.cpp  FrameEncoder.h  FrameEncoder.hpp  FramePostprocessor.cpp  FramePostprocessor.h  FramePostprocessor.hpp  Synthesizer.cpp  Synthesizer.h  Synthesizer.hpp  Tms5220CodingTable.h
tms_express/LPC_Analysis/: Autocorrelation.cpp  Autocorrelation.hpp  LinearPredictor.cpp  LinearPredictor.h  LinearPredictor.hpp  PitchEstimator.cpp  PitchEstimator.h  PitchEstimator.hpp
tms_express/User_Interfaces/: CommandLineApp.cpp  CommandLineApp.h  CommandLineApp.hpp  MainWindow.cpp  MainWindow.h  MainWindow.hpp
tms_express/User_Interfaces/Audio_Waveform/: AudioWaveform.cpp  AudioWaveform.h  AudioWaveform.hpp  AudioWaveformView.cpp  AudioWaveformView.h  AudioWaveformView.hpp
tms_express/User_Interfaces/Control_Panels/: ControlPanelLpcView.cpp  ControlPanelLpcView.h  ControlPanelLpcView.hpp  ControlPanelPitchView.cpp  ControlPanelPitchView.h  ControlPanelPitchView.hpp  ControlPanelPostView.cpp  ControlPanelPostView.h  ControlPanelPostView.hpp  ControlPanelView.cpp  ControlPanelView.h
tms_express/analysis/: Autocorrelation.cpp  LinearPredictor.cpp  LinearPredictor.hpp  PitchEstimator.cpp
tms_express/audio/: AudioBuffer.cpp  AudioFilter.cpp
tms_express/bitstream/: BitstreamGenerator.cpp  BitstreamGenerator.hpp  PathUtils.cpp  PathUtils.hpp
tms_express/encoding/: Frame.cpp  FramePostprocessor.cpp
tms_express/ui/: CommandLineApp.cpp  MainWindow.cpp  MainWindow.hpp
tms_express/ui/Audio_Waveform/: AudioWaveform.cpp  AudioWaveformView.cpp  AudioWaveformView.hpp
tms_express/ui/Control_Panels/: ControlPanelLpcView.cpp  ControlPanelLpcView.hpp  ControlPanelPitchView.cpp  ControlPanelPitchView.hpp  ControlPanelPostView.cpp  ControlPanelPostView.hpp  ControlPanelView.cpp
tms_express/ui/cli/: CommandLineApp.hpp
tms_express/ui/gui/audiowaveform/: AudioWaveform.cpp  AudioWaveformView.hpp
tms_express/ui/gui/controlpanels/: ControlPanelLpcView.cpp  ControlPanelLpcView.hpp  ControlPanelPitchView.cpp  ControlPanelPitchView.hpp  ControlPanelPostView.cpp  ControlPanelPostView.hpp
